tests/baselines/reference/widenToAny1.errors.txt
==== tests/cases/compiler/widenToAny1.ts (1 errors) ====
    
    function foo1<T>(f1: { x: T; y: T }): T {
        return undefined;
    }
    var z1: number = foo1({ x: undefined, y: "def" });  // Best common type is any
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! widenToAny1.ts(5,5): error TS2011: Cannot convert 'string' to 'number'.
    